--- a/another.html
+++ b/another.html
@@ -21,9 +21,9 @@
             <div class="col-sm-2"></div>
         </div>
     </div>
-    <script type="text/javascript" charset="utf-8" src="build/vendor.js"></script>
-    <script type="text/javascript" charset="utf-8" src="build/common.js"></script>
-    <script type="text/javascript" charset="utf-8" src="build/another.js"></script>
+    <script type="text/javascript" charset="utf-8" src="build/vendor-a71213fc1dd15a7f6797.js"></script>
+    <script type="text/javascript" charset="utf-8" src="build/common-3790c30b69346f375f45.js"></script>
+    <script type="text/javascript" charset="utf-8" src="build/another-383c67a55877db2a2261.js"></script>
 </body>
 
 </html>
